arreglé unas medidas del compl_perfil_profesional

--- a/FrontEnd/actualiza_perfil_cliente.html
+++ b/FrontEnd/actualiza_perfil_cliente.html
@@ -106,7 +106,7 @@
         </div>
     </section>
 
-    <script type="module" src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
     <script type="module" src="objetos/loader/loader.js"></script>
 
 </body>
