--- a/FrontEnd/agenda.html
+++ b/FrontEnd/agenda.html
@@ -57,7 +57,7 @@
         </div>
     </section>
 
-    <script src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
 
 </body>
 
