--- a/FrontEnd/clien_orden_crearYlistado.html
+++ b/FrontEnd/clien_orden_crearYlistado.html
@@ -64,7 +64,7 @@
         </div>
     </section>
 
-    <script src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
 
 </body>
 
