--- a/FrontEnd/comp_perfil_cliente.html
+++ b/FrontEnd/comp_perfil_cliente.html
@@ -103,7 +103,7 @@
         </div>
     </section>
     <script type="module" src="objetos/comp_perfil_cliente.js" defer></script>
-    <script type="module" src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
     <script type="module" src="objetos/loader/loader.js"></script>
 
 </body>
