--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -31,6 +31,7 @@
     <script src="objetos/volver.js"></script>
 
 </body>
+<script src="./objetos/volver.js"></script>
 <script type="module" src="objetos/login.js" defer></script>
 <script type="module" src="objetos/loader/loader.js"></script>
 
