--- a/FrontEnd/objetos/Ratings/rating.html
+++ b/FrontEnd/objetos/Ratings/rating.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="rating.css">
 </head>
 <body>
-    <div class="containerRating">
+    <div class="container">
         <div class="info">
           <div class="emoji"></div>
           <div class="status"></div>
