--- a/FrontEnd/sitio_Prof.html
+++ b/FrontEnd/sitio_Prof.html
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-    <script src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
 
 </body>
 
