--- a/FrontEnd/sitio_del_cliente.html
+++ b/FrontEnd/sitio_del_cliente.html
@@ -61,7 +61,7 @@
             </div>
         </div>
     </section>
-    <script src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
 
 </body>
 
