--- a/FrontEnd/term&cond.html
+++ b/FrontEnd/term&cond.html
@@ -61,7 +61,7 @@
             registrada.</p>
         </div>
     </div>
-    <script src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
 
 </body>
 </html>
