--- a/FrontEnd/FAQ.html
+++ b/FrontEnd/FAQ.html
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <script src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
 
 </body>
 
