--- a/FrontEnd/acerca_de.html
+++ b/FrontEnd/acerca_de.html
@@ -33,7 +33,8 @@
         </p>
     </div>
 
-    <script src="objetos/volver.js"></script>
+    
+    <script src="./objetos/volver.js"></script>
 
 </body>
 
