--- a/FrontEnd/comp_perfil_prof.html
+++ b/FrontEnd/comp_perfil_prof.html
@@ -126,7 +126,7 @@
         </div>
     </section>
 
-    <script type="module" src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
     <script type="module" src="objetos/loader/loader.js"></script>
 
 </body>
