--- a/FrontEnd/crear_orden.html
+++ b/FrontEnd/crear_orden.html
@@ -61,7 +61,7 @@
         </div>
     </section>
 
-    <script type="module" src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
     <script type="module" src="objetos/loader/loader.js"></script>
 
 </body>
