--- a/FrontEnd/invitaAregistrar.html
+++ b/FrontEnd/invitaAregistrar.html
@@ -66,7 +66,7 @@
         </div>
     </section>
 
-    <script type="module" src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
 
 </body>
 
