--- a/FrontEnd/ordenes_aceptadas.html
+++ b/FrontEnd/ordenes_aceptadas.html
@@ -56,7 +56,7 @@
         </div>
     </section>
 
-    <script src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
 
 </body>
 
