--- a/FrontEnd/registro_card.html
+++ b/FrontEnd/registro_card.html
@@ -41,7 +41,7 @@
     </div>
     
 
-<script type="module" src="objetos/volver.js"></script>
+    <script src="./objetos/volver.js"></script>
 <script type="module" src="objetos/updateFileName(registro_card).js"></script>
 <script type="module" src="objetos/loader/loader.js"></script>
 
