--- a/FrontEnd/sitio_del_cliente.html
+++ b/FrontEnd/sitio_del_cliente.html
@@ -15,9 +15,9 @@
         <i class="menu"><img src="img/icono-menu.png" alt="menu" width="40px" height="40px" z-index="3"></i>
     </label>
     <aside class="aside">
-        <img class="logo" src="img/Logo1.png" alt="logo">
+        <img  class="logo" src="img/Logo1.png" alt="logo">
         <div class="avatarCliente">
-            <img class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
+            <img id="logoUser" class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
             <h4>Cliente</h4>
         </div>
         <nav>
@@ -45,7 +45,7 @@
             </form>
         </div>
         <div class="recuadro">
-            <div class="volver" onclick="volverUltimaPagina()">
+            <div class="volver" >  <!--onclick="volverUltimaPagina()"-->
                 <img src="img/flecha_izq.png" alt="">
                 <span>Volver</span>
             </div>
@@ -61,7 +61,8 @@
             </div>
         </div>
     </section>
-    <script src="objetos/volver.js"></script>
+    <!-- <script src="objetos/volver.js"></script> -->
+    <script type="module" src="objetos/sitio_del_cliente.js"></script>
 
 </body>
 
