agregar logica para la imagen y para la verificacion del usuario y tambien para borrar el sesion storage al cerrar sesion

--- a/FrontEnd/registro_card.html
+++ b/FrontEnd/registro_card.html
@@ -41,8 +41,8 @@
     </div>
     
 
-<script type="module" src="objetos/volver.js"></script>
-<script type="module" src="objetos/updateFileName(registro_card).js"></script>
+<!-- <script type="module" src="objetos/volver.js"></script> -->
+<!-- <script type="module" src="objetos/updateFileName(registro_card).js"></script> -->
 <!-- <script type="module" src="objetos/loader/loader.js"></script> -->
 
 </body>
