--- a/FrontEnd/sitio_del_cliente.html
+++ b/FrontEnd/sitio_del_cliente.html
@@ -29,7 +29,7 @@
                 <li><img src="img/soporte.png" alt="soporte"><a href="soporte.html">Soporte</a></li>
 
                 <li class="cerrar"><img src="img/cerrar.png" alt="">
-                    <p><a href="index.html">Cerrar sesión</a></p>
+                    <p><a id="cerrarSesion" href="index.html">Cerrar sesión</a></p>
                 </li>
             </ul>
         </nav>
