En los html: eliminé 'onclick=volverUltimaPagina'y el script'volver.js' y agregamos ID='volverButton' y la función para volver en Utils.js

--- a/FrontEnd/actualiza_perfil_cliente.html
+++ b/FrontEnd/actualiza_perfil_cliente.html
@@ -53,7 +53,7 @@
 
             <div id="registro_opciones">
 
-                <div class="volver" onclick="volverUltimaPagina()">
+                <div id="volverbutton" class="volver">
                     <img src="img/flecha_izq.png" alt="">
                     <span>Volver</span>
                 </div>
@@ -106,7 +106,6 @@
         </div>
     </section>
 
-    <script src="./objetos/volver.js"></script>
     <script type="module" src="objetos/loader/loader.js"></script>
 
 </body>
