--- a/FrontEnd/comp_perfil_prof.html
+++ b/FrontEnd/comp_perfil_prof.html
@@ -50,8 +50,8 @@
         <div class="recuadro">
             <div id="registro_opciones">
 
-            <div class="volver" onclick="volverUltimaPagina()">
-                <img src="img/flecha_izq.png" alt="">
+                <div  id="volverbutton" class="volver">
+                    <img src="img/flecha_izq.png" alt="">
                 <span>Volver</span>
             </div>
             <div class="contenidoRecuadro">
@@ -126,7 +126,6 @@
         </div>
     </section>
 
-    <script src="./objetos/volver.js"></script>
     <script type="module" src="objetos/loader/loader.js"></script>
 
 </body>
