--- a/FrontEnd/invitaAregistrar.html
+++ b/FrontEnd/invitaAregistrar.html
@@ -45,7 +45,7 @@
             </form>
         </div>
         <div class="recuadro">
-            <div class="volver">
+            <div  id="volverbutton" class="volver">
                 <img src="img/flecha_izq.png" alt="">
                 <span>Volver</span>
             </div>
@@ -68,7 +68,6 @@
 
 
     <script type="module" src="objetos/invitaAregistrar.js"></script>
-
 
 </body>
 
