--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -15,23 +15,22 @@
     </div>
     <div id="registro_opciones">
 
-    <div class="volver" onclick="volverUltimaPagina()">
-        <img src="img/flecha_izq.png" alt="">
-        <p><span>Volver</span></p>
-    </div>
-    <div class="login_card">
-        <img src="img/NoAvatar.png" alt="avatar" class="avatar">
-        <input type="email" id="email" placeholder="Ingrese su e-mail" required>
-        <input type="password" id="password" placeholder="Ingrese su contraseña" required>
+        <div id="volverbutton" class="volver">
+            <img src="img/flecha_izq.png" alt="">
+            <p><span>Volver</span></p>
+        </div>
+        <div class="login_card">
+            <img src="img/NoAvatar.png" alt="avatar" class="avatar">
+            <input type="email" id="email" placeholder="Ingrese su e-mail" required>
+            <input type="password" id="password" placeholder="Ingrese su contraseña" required>
 
-        <button class="login_button"><a id="login" >Ingresar</a></button>
+            <button class="login_button"><a id="login">Ingresar</a></button>
+        </div>
     </div>
-</div>
 
     <script src="objetos/volver.js"></script>
 
 </body>
-<script src="./objetos/volver.js"></script>
 <script type="module" src="objetos/login.js" defer></script>
 <script type="module" src="objetos/loader/loader.js"></script>
 
