--- a/FrontEnd/registro_card.html
+++ b/FrontEnd/registro_card.html
@@ -16,8 +16,8 @@
     </div>
 
     <div id="registro_opciones">
-    <div class="volver">
-        <img src="img/flecha_izq.png" alt="">
+        <div  id="volverbutton" class="volver">
+            <img src="img/flecha_izq.png" alt="">
         <p>
             <span> <a href="index.html"> Volver</a></span>
         </p>
