--- a/FrontEnd/sitio_del_cliente.html
+++ b/FrontEnd/sitio_del_cliente.html
@@ -45,7 +45,7 @@
             </form>
         </div>
         <div class="recuadro">
-            <div id="volverbutton" class="volver" >  <!--onclick="volverUltimaPagina()"-->
+            <div id="volverbutton" class="volver" >
                 <img src="img/flecha_izq.png" alt="">
                 <span>Volver</span>
             </div>
