--- a/FrontEnd/acerca_de.html
+++ b/FrontEnd/acerca_de.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="volver" onclick="volverUltimaPagina()">
+    <div id="volverbutton" class="volver">
         <img src="img/flecha_izq.png" alt="">
         <span>Volver</span>
     </div>
@@ -34,8 +34,6 @@
     </div>
 
     
-    <script src="./objetos/volver.js"></script>
-
 </body>
 
 </html>
