--- a/FrontEnd/crear_orden.html
+++ b/FrontEnd/crear_orden.html
@@ -49,7 +49,7 @@
         </div>
         <div class="recuadro">
             <div id="registro_opciones">
-                <div class="volver" onclick="volverUltimaPagina()">
+                <div  id="volverbutton" class="volver">
                     <img src="img/flecha_izq.png" alt="">
                     <span>Volver</span>
                 </div>
@@ -61,7 +61,6 @@
         </div>
     </section>
 
-    <script src="./objetos/volver.js"></script>
     <script type="module" src="objetos/loader/loader.js"></script>
 
 </body>
