--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -138,14 +138,11 @@
 
         </div>
         <div class="franja_NoCountry">
-            <p>©2024-No Country - Team C16-84-FT-JAVA</p>
+            <p>© LionelStaricoff | Gladys'MagiCode'Romero | Mario | LuMa</p>
         </div>
     </footer>
 
     <script type="module" src = "./objetos/modal_clienteYprofesional.js"></script>
-    <script type="module" src="objetos/menu_aside.js"></script>
-
-    <script src="./objetos/volver.js"></script>
 
 </body>
 
