--- a/FrontEnd/sitio_Prof.html
+++ b/FrontEnd/sitio_Prof.html
@@ -45,7 +45,7 @@
             </form>
         </div>
         <div class="recuadro">
-            <div class="volver" onclick="volverUltimaPagina()">
+            <div  id="volverbutton" class="volver">
                 <img src="img/flecha_izq.png" alt="">
                 <span>Volver</span>
             </div>
@@ -61,8 +61,6 @@
             </div>
         </div>
     </section>
-
-    <script src="./objetos/volver.js"></script>
 
 </body>
 
