--- a/FrontEnd/soporte.html
+++ b/FrontEnd/soporte.html
@@ -45,7 +45,7 @@
             </form>
         </div>
         <div class="recuadro">
-            <div class="volver" onclick="volverUltimaPagina()">
+            <div  id="volverbutton" class="volver">
                 <img src="img/flecha_izq.png" alt="">
                 <span>Volver</span>
             </div>
@@ -56,8 +56,6 @@
             </div>
         </div>
     </section>
-    <script src="./objetos/volver.js"></script>
-
 </body>
 
 </html>
