--- a/FrontEnd/actualiza_perfil_cliente.html
+++ b/FrontEnd/actualiza_perfil_cliente.html
@@ -29,7 +29,7 @@
                 <li><img src="img/soporte.png" alt="soporte"><a href="soporte.html">Soporte</a></li>
 
                 <li class="cerrar"><img src="img/cerrar.png" alt="">
-                    <p><a href="index.html">Cerrar sesión</a></p>
+                    <p id="cerrarSesion"><a href="index.html">Cerrar sesión</a></p>
                 </li>
             </ul>
         </nav>
@@ -53,7 +53,7 @@
 
             <div id="registro_opciones">
 
-                <div class="volver" onclick="volverUltimaPagina()">
+                <div id="volverbutton" class="volver">
                     <img src="img/flecha_izq.png" alt="">
                     <span>Volver</span>
                 </div>
@@ -106,7 +106,7 @@
         </div>
     </section>
 
-    <script type="module" src="objetos/volver.js"></script>
+    <script type="module" src="objetos/actualiza_perfil_cliente.js"></script>
     <script type="module" src="objetos/loader/loader.js"></script>
 
 </body>
