--- a/FrontEnd/comp_perfil_prof.html
+++ b/FrontEnd/comp_perfil_prof.html
@@ -29,7 +29,7 @@
                 <li><img src="img/soporte.png" alt="soporte"><a href="soporte.html">Soporte</a></li>
 
                 <li class="cerrar"><img src="img/cerrar.png" alt="">
-                    <p><a href="index.html">Cerrar sesión</a></p>
+                    <p id="cerrarSesion"><a href="index.html">Cerrar sesión</a></p>
                 </li>
             </ul>
         </nav>
@@ -50,7 +50,7 @@
         <div class="recuadro">
             <div id="registro_opciones">
 
-            <div class="volver" onclick="volverUltimaPagina()">
+            <div id="volverbutton" class="volver">
                 <img src="img/flecha_izq.png" alt="">
                 <span>Volver</span>
             </div>
@@ -126,9 +126,8 @@
         </div>
     </section>
 
-    <script type="module" src="objetos/volver.js"></script>
     <script type="module" src="objetos/loader/loader.js"></script>
-
+<script type="module" src="objetos/comp_perfil_prof.js"></script>
 </body>
 
 </html>
