--- a/FrontEnd/datos.html
+++ b/FrontEnd/datos.html
@@ -45,7 +45,7 @@
             </form>
         </div>
         <div class="recuadro">
-            <div class="volver" onclick="volverUltimaPagina()">
+            <div class="volver">
                 <img src="img/flecha_izq.png" alt="">
                 <span>Volver</span>
             </div>
@@ -56,7 +56,7 @@
         </div>
     </section>
 
-    <script src="objetos/volver.js"></script>
+   <script type="module" src="objetos/datos.js"></script>
 
 </body>
 
