modificaciones hechas por LuMa: Loader.js y modificó cartelPuntuar con la nueva estética

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -41,7 +41,7 @@
 
 
 
-<script type="text/javascript">
+<script>
     document.querySelector('body').addEventListener('mousemove', eyeball);
     function eyeball() {
         const eye = document.querySelectorAll('.eye');
