--- a/FrontEnd/registro_card.html
+++ b/FrontEnd/registro_card.html
@@ -25,8 +25,15 @@
     <div class="registro_card">
         <h4>Registro Talentium</h4>
         <img src="img/NoAvatar.png" alt="avatar" class="avatar">
-        <input type="email" id="email" placeholder="Ingrese su e-mail (obligatorio)" required>
-        <input type="password" id="password" placeholder="Ingrese su contraseña (obligatorio)" required>
+        <input type="email" id="email" placeholder="Ingrese su e-mail" required>
+
+        <input type="password" id="password" placeholder="Ingrese su contraseña" required>
+        <div class="eye_container open" id="eye_container">
+            <div class="eye"></div>
+            <div class="eye"></div>
+        </div>
+
+
         <div>
             <h5>Avatar(opcional):</h5>
 
@@ -39,6 +46,10 @@
         <a class="login_button">Registrarse</a>
     </div>
     </div>
+
+
+    <script type="module" src="objetos/registro_card.js" defer></script>
+    <script type="module" src="objetos/loader/loader.js"></script>
 
 </body>
 
