agregando el seteo de imagenes a todos los templates

--- a/FrontEnd/prof_lista_mis_ordenes.html
+++ b/FrontEnd/prof_lista_mis_ordenes.html
@@ -15,9 +15,9 @@
         <i class="menu"><img src="img/icono-menu.png" alt="menu" width="40px" height="40px" z-index="3"></i>
     </label>
     <aside class="aside">
-        <img class="logo" src="img/Logo1.png" alt="logo">
+        <img  class="logo" src="img/Logo1.png" alt="logo">
         <div class="avatarCliente">
-            <img class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
+            <img id="logoUser" class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
             <h4>Profesional</h4>
         </div>
         <nav>
@@ -57,5 +57,5 @@
     </section>
 
 </body>
-
+<script type="module" src="objetos/prof_lista_mis_ordenes.js"></script>
 </html>
