--- a/FrontEnd/sitio_Prof.html
+++ b/FrontEnd/sitio_Prof.html
@@ -17,7 +17,7 @@
     <aside class="aside">
         <img class="logo" src="img/Logo1.png" alt="logo">
         <div class="avatarCliente">
-            <img class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
+            <img id="logoUser" class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
             <h4>Profesional</h4>
         </div>
         <nav>
@@ -63,5 +63,5 @@
     </section>
 
 </body>
-
+<script type="module" src="objetos/sitio_Prof.js"></script>
 </html>
