--- a/FrontEnd/soporte.html
+++ b/FrontEnd/soporte.html
@@ -17,7 +17,7 @@
     <aside class="aside">
         <img class="logo" src="img/Logo1.png" alt="logo">
         <div class="avatarCliente">
-            <img class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
+            <img id="logoUser" class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
             <h4>Usuario</h4>
         </div>
         <nav>
@@ -57,5 +57,5 @@
         </div>
     </section>
 </body>
-
+<script type="module" src="objetos/soporte.js"></script>
 </html>
