agregando verificacion de la imagen y ajustando el string de la url del login

--- a/FrontEnd/invitaAregistrar.html
+++ b/FrontEnd/invitaAregistrar.html
@@ -17,7 +17,7 @@
     <aside class="aside">
         <img class="logo" src="img/Logo1.png" alt="logo">
         <div class="avatarCliente">
-            <img id="logoUser" class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
+            <img id="logoUser" class="img_Cliente" src="./img/NoAvatar.png" alt="avatar">
             <h4>Usuario</h4>
         </div>
         <nav>
