empezando con professionales, verificar el error del cartel

--- a/FrontEnd/comp_perfil_prof.html
+++ b/FrontEnd/comp_perfil_prof.html
@@ -104,16 +104,17 @@
                             <label for="especialidad">Especialidad</label>
                             <select id="especialidad" name="Ingrese su especialidad">
                                 <option value="" disabled selected>Selecciona una especialidad</option>
-                                <option value="albañil">Albañil</option>
-                                <option value="cuidador">cuidador</option>
-                                <option value="diseñador">Diseñador</option>
-                                <option value="electricista">Electricista</option>
-                                <option value="gasista">Gasista</option>
-                                <option value="jardinero">Jardinero</option>
-                                <option value="pintor">Pintor</option>
-                                <option value="plomero">Plomero</option>
-                                <option value="profesor">Profesor</option>
-                                <option value="programador">Programador</option>
+                                <option value="DESIGNER">DESIGNER</option>
+                                <option value="PROGRAMMER">PROGRAMMER</option>
+                                <option value="TEACHER">TEACHER</option>
+                                <option value="GASMAN">GASMAN</option>
+                                <option value="GARDENER">GARDENER</option>
+                                <option value="PAINTER">PAINTER</option>
+                                <option value="CONSTRUCTION_WORKER">CONSTRUCTION_WORKER</option>
+                                <option value="ELECTRICIAN">ELECTRICIAN</option>
+                                <option value="PLUMBER">PLUMBER</option>
+                                <option value="OTHERS">OTHERS</option>
+                                <option value="NANNY">NANNY</option>
                             </select>
                         </div>
                     </div>
