--- a/FrontEnd/comp_perfil_prof.html
+++ b/FrontEnd/comp_perfil_prof.html
@@ -118,8 +118,8 @@
                             </select>
                         </div>
                     </div>
-                    <div class="boton_centrado">
-                        <a href="sitio_Prof.html">Crear perfil</a>
+                    <div id="crearPerfil" class="boton_centrado">
+                        <a >Crear perfil</a>
                     </div>
                 </form>
             </div>
