--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -74,7 +74,7 @@
                     ¡Explora, innova y crece con nosotros!
                 </p>
             </div>
-            <div class="img">
+            <div class="imagen">
                 <img src="img/foto_trabajadores.png" alt="">
             </div>
         </section>
@@ -138,7 +138,7 @@
 
         </div>
         <div class="franja_NoCountry">
-            <p>© LionelStaricoff | Gladys'MagiCode'Romero | Mario | LuMa</p>
+            <p>© LionelStaricoff | Gladys <img src="img/MiLogo-svg.svg" alt="MagiCode" height="30px">  | Mario | LuMa</p>
         </div>
     </footer>
 
