--- a/FrontEnd/prof_lista_mis_ordenes.html
+++ b/FrontEnd/prof_lista_mis_ordenes.html
@@ -22,11 +22,10 @@
         </div>
         <nav>
             <ul>
-                <li><img src="img/home.png" alt="home"><a href="index.html">Inicio</a></li>
-                <li><img src="img/datos.png" alt="datos"><a href="datos.html">Datos</a></li>
-                <li><img src="img/ordenes.png" alt="órdenes"><a href="lista_ordenes.html">Ordenes</a></li>
-                <li><img src="img/agenda.png" alt="agenda"><a href="agenda.html">Agenda</a></li>
-                <li><img src="img/soporte.png" alt="soporte"><a href="soporte.html">Soporte</a></li>
+                <li><img src="img/home.png" alt="home"><a href="sitio_del_cliente.html">Inicio</a></li>
+                <li><img src="img/ordenes.png" alt="órdenes"><a href="clien_orden_crearYlistado.html">Ordenes</a></li>
+                <li><img src="img/agenda.png" alt="agenda"><a>Agenda</a></li>
+                <li><img src="img/soporte.png" alt="soporte"><a>Soporte</a></li>
 
                 <li class="cerrar"><img src="img/cerrar.png" alt="">
                     <p><a href="index.html">Cerrar sesión</a></p>
