actualizando spring en actualizar cliente e implementando la funcion en el front

--- a/FrontEnd/actualiza_perfil_cliente.html
+++ b/FrontEnd/actualiza_perfil_cliente.html
@@ -17,7 +17,7 @@
     <aside class="aside">
         <img class="logo" src="img/Logo1.png" alt="logo">
         <div class="avatarCliente">
-            <img class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
+            <img id="logoUser" class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
             <h4>Cliente</h4>
         </div>
         <nav>
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                         <div class="boton_centrado">
-                            <a href="sitio_del_cliente.html">Actualizar perfil</a>
+                            <a>Actualizar perfil</a>
                         </div>
                     </form>
                 </div>
