arreglando un bug de las imagenes

--- a/FrontEnd/actualiza_perfil_cliente.html
+++ b/FrontEnd/actualiza_perfil_cliente.html
@@ -22,7 +22,7 @@
         </div>
         <nav>
             <ul>
-                <li><img src="img/home.png" alt="home"><a href="index.html">Inicio</a></li>
+                <li><img src="img/home.png" alt="home"><a href="sitio_del_cliente.html">Inicio</a></li>
                 <li><img src="img/ordenes.png" alt="órdenes"><a href="clien_orden_crearYlistado.html">Ordenes</a></li>
                 <li><img src="img/agenda.png" alt="agenda"><a>Agenda</a></li>
                 <li><img src="img/soporte.png" alt="soporte"><a>Soporte</a></li>
