ajustando css de las ordenes creadas por el cliente en listar ordenes

--- a/FrontEnd/clien_lista_ordenes.html
+++ b/FrontEnd/clien_lista_ordenes.html
@@ -17,12 +17,12 @@
     <aside class="aside">
         <img class="logo" src="img/Logo1.png" alt="logo">
         <div class="avatarCliente">
-            <img class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
+            <img id="logoUser" class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
             <h4>Cliente</h4>
         </div>
         <nav>
             <ul>
-                <li><img src="img/home.png" alt="home"><a href="sitio_Prof.html">Inicio</a></li>
+                <li><img src="img/home.png" alt="home"><a href="sitio_del_cliente.html">Inicio</a></li>
                 <li><img src="img/ordenes.png" alt="órdenes"><a href="clien_orden_crearYlistado.html">Ordenes</a></li>
                 <li><img src="img/agenda.png" alt="agenda"><a>Agenda</a></li>
                 <li><img src="img/soporte.png" alt="soporte"><a>Soporte</a></li>
@@ -48,13 +48,12 @@
                 <img src="img/flecha_izq.png" alt="">
                 <span>Volver</span>
             </div>
-            <div class="contenidoRecuadro">
+            <div id="front" class="contenidoRecuadro">
                 <h2>Mis órdenes</h2>
-                <div class="lista">Aquí el cliente puede ver las órdenes que generó</div>
             </div>
         </div>
     </section>
 
 </body>
-
+<script type="module" src="objetos/clien_lista_ordenes.js" defer></script>
 </html>
