listando las ordenes desde el profesioanl

--- a/FrontEnd/prof_lista_mis_ordenes.html
+++ b/FrontEnd/prof_lista_mis_ordenes.html
@@ -48,9 +48,8 @@
                 <img src="img/flecha_izq.png" alt="">
                 <span>Volver</span>
             </div>
-            <div class="contenidoRecuadro">
+            <div id="front" class="contenidoRecuadro">
                 <h2>Lista de mis órdenes</h2>
-                <div class="lista">Aquí va el objeto que trae la lista de las órdenes (los trabajos de ese profesional)</div>
             </div>
         </div>
     </section>
