--- a/FrontEnd/prof_lista_mis_ordenes.html
+++ b/FrontEnd/prof_lista_mis_ordenes.html
@@ -22,8 +22,8 @@
         </div>
         <nav>
             <ul>
-                <li><img src="img/home.png" alt="home"><a href="sitio_del_cliente.html">Inicio</a></li>
-                <li><img src="img/ordenes.png" alt="órdenes"><a href="clien_orden_crearYlistado.html">Ordenes</a></li>
+                <li><img src="img/home.png" alt="home"><a href="sitio_Prof.html">Inicio</a></li>
+                <li><img src="img/ordenes.png" alt="órdenes"><a href="prof_lista_mis_ordenes.html">Ordenes</a></li>
                 <li><img src="img/agenda.png" alt="agenda"><a>Agenda</a></li>
                 <li><img src="img/soporte.png" alt="soporte"><a>Soporte</a></li>
 
