--- a/FrontEnd/ordenes_aceptadas _cliente.html
+++ b/FrontEnd/ordenes_aceptadas _cliente.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/Icon.ico" type="icon">
-    <link rel="stylesheet" href="css/sitio_del_cliente.css">
-    <title>Talentium - Sitio del Cliente</title>
+    <link rel="stylesheet" href="css/lista_ordenes.css">
+    <title>Talentium - Ordenes aceptadas</title>
 </head>
 
 <body>
@@ -15,10 +15,10 @@
         <i class="menu"><img src="img/icono-menu.png" alt="menu" width="40px" height="40px" z-index="3"></i>
     </label>
     <aside class="aside">
-        <img  class="logo" src="img/Logo1.png" alt="logo">
+        <img class="logo" src="img/Logo1.png" alt="logo">
         <div class="avatarCliente">
             <img id="logoUser" class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
-            <h4>Cliente</h4>
+            <h4>Profesional</h4>
         </div>
         <nav>
             <ul>
@@ -28,7 +28,7 @@
                 <li><img src="img/soporte.png" alt="soporte"><a>Soporte</a></li>
 
                 <li class="cerrar"><img src="img/cerrar.png" alt="">
-                    <p><a id="cerrarSesion" href="index.html">Cerrar sesión</a></p>
+                    <p><a href="index.html">Cerrar sesión</a></p>
                 </li>
             </ul>
         </nav>
@@ -40,28 +40,20 @@
             <form id="buscador" action="/tu-pagina-de-busqueda" method="get">
                 <label for="search"><img src="img/lupa.png" alt="lupa"></label>
                 <input class="buscador" type="text" id="search" name="q" placeholder="Escribe tu búsqueda">
-                <!-- <input type="submit" value="Buscar"> -->
             </form>
         </div>
         <div class="recuadro">
-            <div id="volverbutton" class="volver" >
+            <div  id="volverbutton" class="volver">
                 <img src="img/flecha_izq.png" alt="">
                 <span>Volver</span>
             </div>
-            <div class="contenidoRecuadro">
-                <div class="botonera">
-                    <div><a href="actualiza_perfil_cliente.html">Perfil</a></div>
-                    <div><a href="clien_lista_ordenes.html">Lista de mis órdenes</a></div>
-                    <div><a href="crear_orden.html">Crear nueva orden</a></div>
-                    <div><a href="ordenes_aceptadas _cliente.html">Ordenes aceptadas</a></div>
-                    <div><a href="ordenes_pendientes _cliente.html">Ordenes pendientes</a></div>
-                    <div><a href="ordenes_completadas_cliente.html">Ordenes completadas</a></div>
-                </div>
+            <div id="front" class="contenidoRecuadro">
+                <h2>Ordenes aceptadas</h2>
+              
             </div>
         </div>
     </section>
-   
-    <script type="module" src="objetos/sitio_del_cliente.js"></script>
-</body>
 
+</body>
+<script type="module" src="objetos/ordenes_aceptadas_cliente.js"></script>
 </html>
