ajustando la comprobacion de los objetos del front

--- a/FrontEnd/ordenes_aceptadas _cliente.html
+++ b/FrontEnd/ordenes_aceptadas _cliente.html
@@ -18,7 +18,7 @@
         <img class="logo" src="img/Logo1.png" alt="logo">
         <div class="avatarCliente">
             <img id="logoUser" class="img_Cliente" src="img/NoAvatar.png" alt="avatar">
-            <h4>Profesional</h4>
+            <h4>Cliente</h4>
         </div>
         <nav>
             <ul>
